# saviour

./: .gitignore  CLAUDE.md  Generic Habitat Requirements 180325.1.2 PS.md.md  HANDOVER.md  LICENSE.txt  README.md  System Requirements Specification.docx  capture_master_image.sh  clone_prep.sh  configure_network.sh  conftest.py  fix_ssh_and_hostname.sh  framesync_summary.csv  habitat_uninstall_summary.txt  install.sh  mend.sh  multiclone.sh  package-lock.json  primary_setup.sh  push_credentials.sh  pyproject.toml  recording.ts  regenerate_ssh_key.sh  repair_null_bytes.sh  saviour-config  saviour_uninstall_summary.txt  setup.py  setup.sh  switch_role.sh  system_setup_summary.txt  test.sh  test_ptp_buffer.py  uninstall.sh
.github/workflows/: python-app.yml
brief/: doc.txt  email.txt
controller/: controller.py  ptp.py
dev/arduino/: comms.py  protocol.py
dev/arduino/commstest/: commstest.ino
dev/zmq/: json_publisher.py  json_subscriber.py
docs/: CONFIG_STRUCTURE.md  INTEGRATION_TEST_PLAN.md  NEW_MODULE_GUIDE.md  Overview.md  PROTOCOL_V1.md  SAVIOUR.md  module_class_diagram.mmd  remote_samba_setup.md
docs/hardware/: colourful-rainbow-gradient-background_1308-78086.avif  parts_chooser.py  shopping_list.csv
env/: pyvenv.cfg
modules/base/: module.py  test_client.py  test_client_eth0.py  test_subprocess.py  test_subprocess_tcpdump.py
modules/io/: io_module.py
modules/ttl_io/: module_ttl_io.py
src/: __version__.py  ptp_example_controller.py  ptp_example_module.py  ptp_manager.py  requirements.txt  setup.py
src/controller/: .env  api.py  buffer.py  communication.py  config.json  config.py  controller.py  controller_buffer_manager.py  controller_cli_interface.py  controller_command_handler.py  controller_communication_manager.py  controller_config_manager.py  controller_data_export_manager.py  controller_database_manager.py  controller_file_transfer.py  controller_file_transfer_manager.py  controller_health_monitor.py  controller_interface_manager.py  controller_ptp_manager.py  controller_service_manager.py  controller_web_interface.py  controller_web_interface_manager.py  database.py  export_queue.py  facade.py  health.py  interface_manager.py  models.py  module.py  modules.py  network.py  notify.py  ptp.py  recording.py  service.py  session.py  web.py  web_interface_manager.py
src/controller/config/: base_config.json
src/controller/examples/: apa_controller.py  apa_web.py  bash_camera_livestream.py  change_config_example.py  controller.sh  controller_example.py  controller_ptp_example.py  webtest.py
src/controller/examples/acoustic_startle/: acoustic_startle_controller.py  acoustic_startle_controller_config.json
src/controller/examples/apa/: apa_controller.py  apa_web.py
src/controller/examples/basic/: basic_controller.py
src/controller/examples/habitat/: NO_NAME_20263910_130201.txt  habitat_controller.py  habitat_controller_config.json
src/controller/examples/loom/: loom_controller.py
src/controller/examples/stream/: mjpeg_dual_viewer.py  mjpeg_viewer.py
src/controller/examples/zeromq/: hwclient.py  hwserver.py
src/controller/frontend/: FRONTEND.md  built_webapp.py  index.html  package-lock.json  webapp.py
src/controller/templates/: base.html  guide.html  index.html  recordings.html  settings.html  test.html
src/controller/testing/: test.py  test_controller.py  test_controller_file_transfer.py  test_server.py  test_server_eth0.py  test_supabase.py  test_zeroconf.py
src/controller/tests/: test_communication.py  test_controller.py  test_export_queue.py  test_facade.py  test_modules_config_sync.py  test_recording_schedule.py
src/modules/: .env  api.py  arduino_module.py  audiomoth_module.py  camera.py  camera_base.py  camera_config.json  camera_example.py  camera_module.py  command.py  communication.py  config.py  export.py  facade.py  health.py  microphone_module.py  module.py  module_command_handler.py  module_communication_manager.py  module_config_manager.py  module_example.py  module_export_manager.py  module_file_transfer.py  module_file_transfer_manager.py  module_health_manager.py  module_ptp_manager.py  module_service_manager.py  network.py  ptp.py  recording.py  service.py  ttl_module.py
src/modules/base/: module.py
src/modules/config/: active_config.json  base_config.json  base_module_config.json  camera_config.json  generic_config.json  microphone_config.json  rfid_config.json  ttl_config.json  ttl_io_config.json
src/modules/examples/: =5.5.1  bash_camera_livestream.py  camera.sh  camera_example_config.json  camera_timestamp_demo.py  example_config.json  frame_times.txt  gpio_pulse_generator.py  gpio_timestamp.py  module.sh  module_config_example.py  module_example.py  module_ptp_example.py  picamera2_basic_fps_demo.py  picamera2_stream_socket.py  rfid_example_config.json  set_callbacks_with_dict.py  simple_config_example.py  ttl.sh  ttl_event_buffer.txt  ttl_example.py
src/modules/testing/: camera_example.py  receiver.py  sender.py  test_camera_module.py  test_module.py  test_module_file_transfer.py
src/modules/tests/: test_config.py  test_export.py  test_module.py  test_module_config_manager.py
src/modules/wip/: bash_camera_libcamera_record.py  bash_camera_libcamera_stream.py  rfid.py  simple_camera.py  simple_camera_timestamped.py  test.h264  timestamps.json
src/shared/: health.py  network.py  zip_extract.py
src/tests/: camera_test.py  test_ptp_parsing.py
tests/: test_camera_module.py  test_controller.py  test_controller_buffer_manager.py  test_controller_communication_manager.py  test_controller_data_export_manager.py  test_controller_file_transfer.py  test_controller_interface_manager.py  test_controller_service_manager.py  test_controller_session_manager.py  test_export_parsing.py  test_module.py  test_module_communication_manager.py  test_module_config_manager.py  test_module_file_transfer.py  test_module_service_manager.py  test_ptp_parsing.py  ttl_time_test.sh
tools/: analyse_framesync.py  convert_to_hailo.py  make_aligned_video.py  ping_sweep.sh  snapshot_labels.py  tile_recordings.py
(+292 files in other folders)
