[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "habitat"
version = "0.1.0"
description = "Modular Synchronised Data Capture System for behavioral testing labs"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE.txt" }
authors = [
    { name = "Andrew Scott-George", email = "ascottg@ed.ac.uk" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "aiohttp>=3.11.16",
    "h5py>=3.13.0",
    "hdmf>=4.0.0",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "psutil>=7.0.0",
    "pydantic>=2.11.2",
    "pynwb>=3.0.0",
    "python-dotenv>=1.1.0",
    "pyzmq>=26.4.0",
    "ruamel.yaml>=0.18.10",
    "supabase>=2.15.0",
    "websockets>=14.2",
    "zeroconf>=0.146.3",
    "Flask>=2.2.2",
    "Flask-SocketIO>=5.5.1"
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
    "pytest-mock>=3.14.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"

[tool.ruff]
line-length = 88
target-version = "py38"
select = ["E", "F", "I", "N", "W", "B", "UP", "PL", "RUF"]
ignore = []

[tool.ruff.isort]
known-first-party = ["habitat"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
disallow_incomplete_defs = false

[project.urls]
Homepage = "https://github.com/Kind-Wyllie-lab/habitat"
Documentation = "https://github.com/Kind-Wyllie-lab/habitat#readme"
Repository = "https://github.com/Kind-Wyllie-lab/habitat.git"
Issues = "https://github.com/Kind-Wyllie-lab/habitat/issues" 