[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "saviour"
dynamic = ["version"]
description = "Modular Synchronised Data Capture System for behavioral testing labs"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE.txt" }
authors = [
    { name = "Andrew Scott-George", email = "ascottg@ed.ac.uk" },
    { name = "Domagoj Anticic", email = "d.anticic@sms.ed.ac.uk" },
    { name = "Patrick Spooner", email = "p.a.spooner@ed.ac.uk" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "aiohttp>=3.11.16",
    "h5py>=3.13.0",
    "hdmf>=4.0.0",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "psutil>=7.0.0",
    "pydantic>=2.11.2",
    "pynwb>=3.0.0",
    "python-dotenv>=1.1.0",
    "pyzmq>=26.4.0",
    "ruamel.yaml>=0.18.10",
    "supabase>=2.15.0",
    "websockets>=14.2",
    "zeroconf>=0.146.3",
    "Flask>=2.2.6",
    "Flask-SocketIO>=5.5.1",
    "simplejpeg>=1.8.2",
    "opencv-python>=4.0.0",
    "SoundCard>=0.4.4",
    "soundfile>=0.13.1",
]

[tool.hatch.version]
path = "src/__init__.py"

[tool.hatch.build]
exclude = [
    "src/controller/frontend/node_modules",
    "src/controller/frontend/.next",
    "src/controller/frontend/dist",
    "src/controller/frontend/build",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
    "pytest-mock>=3.14.0",
]

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "node-and-date"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"

[tool.ruff]
line-length = 88
target-version = "py38"
select = ["E", "F", "I", "N", "W", "B", "UP", "PL", "RUF"]
ignore = []

[tool.ruff.isort]
known-first-party = ["saviour"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
disallow_incomplete_defs = false

[project.urls]
Homepage = "https://github.com/Kind-Wyllie-lab/saviour"
Documentation = "https://github.com/Kind-Wyllie-lab/saviour#readme"
Repository = "https://github.com/Kind-Wyllie-lab/saviour.git"
Issues = "https://github.com/Kind-Wyllie-lab/saviour/issues" 