[build-system]
requires = ["hatchling", "setuptools>=80", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "saviour"
dynamic = ["version"]
description = "Modular Synchronised Data Capture System for behavioral testing labs"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE.txt" }
authors = [
    { name = "Andrew Scott-George", email = "ascottg@ed.ac.uk" },
    { name = "Domagoj Anticic", email = "d.anticic@sms.ed.ac.uk" },
    { name = "Patrick Spooner", email = "p.a.spooner@ed.ac.uk" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=2.2.4",
    "psutil>=7.0.0",
    "pytest>=8.4.2",
    "python-dotenv>=1.1.0",
    "pyzmq>=26.4.0",
    "zeroconf>=0.146.3",
    "Flask>=2.2.6",
    "Flask-SocketIO>=5.5.1",
    "opencv-python>=4.0.0",
    "SoundCard>=0.4.4",
    "soundfile>=0.13.1"
]

[tool.hatch.build]
exclude = [
    "src/controller/frontend/node_modules",
    "src/controller/frontend/.next",
    "src/controller/frontend/dist",
    "src/controller/frontend/build",
]

[tool.hatch.version]
path = "src/__version__.py"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
    "pytest-mock>=3.14.0",
]

[tool.setuptools_scm]


[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"

[tool.ruff]
line-length = 88
target-version = "py38"
select = ["E", "F", "I", "N", "W", "B", "UP", "PL", "RUF"]
ignore = []

[tool.ruff.isort]
known-first-party = ["saviour"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
disallow_incomplete_defs = false

[project.urls]
Homepage = "https://github.com/Kind-Wyllie-lab/saviour"
Documentation = "https://github.com/Kind-Wyllie-lab/saviour#readme"
Repository = "https://github.com/Kind-Wyllie-lab/saviour.git"
Issues = "https://github.com/Kind-Wyllie-lab/saviour/issues" 
